--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		    	<p class="description">
 					Tomsk State University, Department of Physics, Department of Quantum Field Theory
 		    	</p>
-		    	<span class="date">Dec. 2017 - December 2018</span>
+		    	<span class="date">September 2015 - July 2019</span>
 			</li>  
 		  	<li>
 		  	</li>
@@ -116,7 +116,7 @@
 		    	<p class="description">
 					Self Education
 		    	</p>
-		    	<span class="date">December 2018 - Today</span>
+		    	<span class="date">July 2019 - Today</span>
 		  	</li>
 		</ol>
 	</div>
