--- a/index.html
+++ b/index.html
@@ -142,6 +142,12 @@
 					<span>Open Data Science</span>
 				</div>
 			</div>
+			<div class="list-card">
+				<div>
+					<a href="https://www.youtube.com/watch?v=3ODGMMVYq78&list=PLQJ7ptkRY-xYLEAC5Y_sKqrJ9RA-U7Dja" target="_blank"><h3>Web Services for Data Scientist</h3></a>
+					<span>Gleb Mikhaylov</span>
+				</div>
+			</div>
 		</div>
 		<div class="sections">		
 			<h2 class="section-title none">Courses</h2>
