--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="container">
 		<div class="hero">
 			<h1 class="name"><strong>Konstantin</strong> Turov</h1>
-			<span class="job-title">Junior data science</span>
+			<span class="job-title">Data science</span>
 			<span class="email">konantur1322@yandex.ru</span>
 			<span class="email">konantur@gmail.com</span>
 			<p class="thumb">
