--- a/index.html
+++ b/index.html
@@ -1,181 +1,162 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
-<head>
-	<title>Resume</title>
-	<link rel="stylesheet" href="styles.css">
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+    <head>
+        <meta charset="utf-8">
 
-<body>
-	<div class="container">
-		<div class="hero">
-			<h1 class="name"><strong>Konstantin</strong> Turov</h1>
-			<span class="job-title">Data science</span>
-			<span class="email">konantur1322@yandex.ru</span>
-			<span class="email">konantur@gmail.com</span>
-			<p class="thumb">
-				<a href="https://vk.com/konantur" target="_blank"><img src="icon/vk.svg" width="38" height="38" alt="vk"></a>
-			</p>
-		</div>
-	</div>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- Skills and intrest section -->
-	<div class="container">
-		<div class="sections">
-			<h2 class="section-title">Technology</h2>
-			<div class="list-card">
-				<span class="exp">8/10</span>
-				<div>
-					<h3>Python</h3>
-					<span>NumPy, Pandas, Matplotlib, PyTorch, Django etc.</span>
-				</div>
-			</div>		
-			<div class="list-card">
-				<span class="exp">5/10</span>
-				<div>
-					<h3>JavaScript</h3>
-					<span>JQuery, React, Redux etc.</span>
-				</div>
-			</div>						
-			<div class="list-card">
-				<span class="exp"></span>
-				<div>
-					<h3>Other</h3>
-					<span>Linux, Git, (I know a little C ++) etc.</span>
-				</div>
-			</div>
-		</div>
+        <title>Résumé</title>
 
-		<div class="sections">
-			<h2 class="section-title">Hobbies and interests</h2>			
-			<div class="list-card">
-				<div>
-					<h3>Music</h3>
-					<span>I play the guitar and a little drums, learn ableton.</span>
-				</div>
-			</div>	
-			<div class="list-card">
-				<div>
-					<h3>Painting</h3>
-					<span>I draw pictures for instagram.</span>
-				</div>
-			</div>		
-		</div>
-	</div>
+        <link rel="stylesheet" href="./assets/font/noto/stylesheets/NotoSansKR-Hestia.css">
 
-	<div class="container m-t">
-		<ol class="timeline">
-		  	<li>
-		    	<p class="line">Work Experience</p>
-		    	<span class="point"></span>
-		    	<p class="description">
-		      		QEEP-Pro
-		    	</p>
-		    	<span class="date">Dec. 2017 - December 2018</span>
-		  	</li>
-		  	<li>
-		    	<span class="point"></span>
-		    	<p class="description">
-		      		Freelance
-		    	</p>
-		    	<span class="date">Dec. 2018 - April 2019</span>
-		  	</li>
-		  	<li>
-		    	<span class="point"></span>
-		    	<p class="description">
-					Scholastic Network
-		    	</p>
-		    	<span class="date">April 2019 - May 2019</span>
-		  	</li>
-		  	<li>
-		    	<span class="point"></span>
-		    	<p class="description">
-					Freelance
-		    	</p>
-		    	<span class="date">May 2019 - Today</span>
-		  	</li>
-		</ol>
-	</div>
+        <link href="./assets/bower_components/components-font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
-	<div class="container m-t-l">
-		<ol class="timeline">
-		  	<li>
-		    	<p class="line">Education</p>
-		    	<span class="point"></span>
-		    	<p class="description">
-					Tomsk State University, Department of Physics, Department of Quantum Field Theory
-		    	</p>
-		    	<span class="date">September 2015 - July 2019</span>
-			</li>  
-		  	<li>
-		  	</li>
-		  	<li>
-		    	<span class="point"></span>
-		    	<p class="description">
-					Self Education
-		    	</p>
-		    	<span class="date">July 2019 - Today</span>
-		  	</li>
-		</ol>
-	</div>
+        <link href="./assets/css/common.css" rel="stylesheet">
+        <link href="./assets/css/style.css" rel="stylesheet">
+    </head>
 
-	<div class="container m-t-l-m">
-		<div class="sections">
-			<h2 class="section-title">Courses</h2>
-			<div class="list-card">
-				<div>
-					<a href="https://stepik.org/cert/102726" target="_blank"><h3>Программирование на Python</h3></a>
-					<span>Bioinformatics Institute</span>
-				</div>
-			</div>	
-			<div class="list-card">
-				<div>
-					<a href="https://stepik.org/cert/272143" target="_blank"><h3>Нейронные сети и компьютерное зрение</h3></a>
-					<span>Samsung Research Russia Open Education</span>
-				</div>
-			</div>		
-			<div class="list-card">
-				<div>
-					<a href="https://habr.com/ru/company/mailru/blog/344044/" target="_blank"><h3>Открытый курс машинного обучения.</h3></a>
-					<span>Open Data Science</span>
-				</div>
-			</div>
-			<div class="list-card">
-				<div>
-					<a href="https://www.youtube.com/watch?v=3ODGMMVYq78&list=PLQJ7ptkRY-xYLEAC5Y_sKqrJ9RA-U7Dja" target="_blank"><h3>Web Services for Data Scientist</h3></a>
-					<span>Gleb Mikhaylov</span>
-				</div>
-			</div>
-		</div>
-		<div class="sections">		
-			<h2 class="section-title none">Courses</h2>
-			<div class="list-card">
-				<div>
-					<a href="https://stepik.org/cert/107806" target="_blank"><h3>Python: основы и применение</h3></a>
-					<span>Bioinformatics Institute</span>
-				</div>
-			</div>	
-			<div class="list-card">
-				<div>
-					<a href="https://stepik.org/cert/372689" target="_blank"><h3>Нейронные сети и обработка текста</h3></a>
-					<span>Samsung Research Russia Open Education</span>
-				</div>
-			</div>	
-			<div class="list-card">
-				<div>
-					<a href="https://dlcourse.ai/" target="_blank"><h3>Deep Learning на пальцах</h3></a>
-				</div>
-			</div>
-		</div>
-	</div>
+    <body>
 
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
+        <div class="resume-wrapper">
 
-</body>
+            <header>
+                <h1 class="heading-container">Résumé</h1>
+                <h2 class="name-container">Konstantin Turov</h2>
+                <h3 class="job-container">Web/Ml developer</h3>
+                <div class="profile-picture">
+                    <img src="./assets/img/photo.jpg" alt="">
+                </div>
+                <div class="contact-container">
+                    <ul class="contact-list">
+                        <li>
+                            <a href="tel:89996197931">+7 999 619 79 31</a>
+                            <span><i class="fa fa-phone" aria-hidden="true"></i></span>
+                        </li>
+                        <li>
+                            <a href="mailto:konantur1322@yandex.ru">konantur1322@yandex.ru</a>
+                            <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
+                        </li>
+                        <li>
+                            <a href="https://github.com/KonAnTur" target="_blank">GitHub</a>
+                            <span><i class="fa fa-github" aria-hidden="true"></i></span>
+                        </li>
+                    </ul>
+                </div>
+            </header>
+
+            <section id="main">
+
+                <div class="resume-item-wrapper">
+                    <section class="resume-item experience">
+                        <div class="inner">
+                            <h2>experience</h2>
+                            <ul>
+                                <li>
+                                    <h3>Frontend developer</h3>
+                                    <h4 class="company">QEEP-Pro</h4>
+                                    <span class="date">Dec. 2017 - Nov. 2018</span>
+                                    <p class="detail">
+                                        Worked on a template engine for online stores.
+                                    </p>
+                                </li>
+                                <li>
+                                    <h3>Freelance</h3>
+                                    <span class="date">Nov. 2018 - Present time</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </section>
+
+                    <section class="resume-item skill">
+                        <div class="inner">
+                            <h2>Skill</h2>
+                            <ul>
+                                <li>
+                                    <h3>Python</h3>
+                                    <div class="skill-bar">
+                                        <span class="bar" style="width: 90% ;"></span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <h3>Django</h3>
+                                    <div class="skill-bar">
+                                        <span class="bar" style="width: 80% ;"></span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <h3>Flask</h3>
+                                    <div class="skill-bar">
+                                        <span class="bar" style="width: 40% ;"></span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <h3>SQL (MySQL)</h3>
+                                    <div class="skill-bar">
+                                        <span class="bar" style="width: 60% ;"></span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <h3>Docker</h3>
+                                    <div class="skill-bar">
+                                        <span class="bar" style="width: 40% ;"></span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <h3>JavaScript</h3>
+                                    <div class="skill-bar">
+                                        <span class="bar" style="width: 70% ;"></span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <h3>React</h3>
+                                    <div class="skill-bar">
+                                        <span class="bar" style="width: 70% ;"></span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <h3>Redux</h3>
+                                    <div class="skill-bar">
+                                        <span class="bar" style="width: 50% ;"></span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <h3>HTML</h3>
+                                    <div class="skill-bar">
+                                        <span class="bar" style="width: 85% ;"></span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <h3>CSS</h3>
+                                    <div class="skill-bar">
+                                        <span class="bar" style="width: 85% ;"></span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <h3>PyTorch</h3>
+                                    <div class="skill-bar">
+                                        <span class="bar" style="width: 65% ;"></span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <h3>PyTorch</h3>
+                                    <div class="skill-bar">
+                                        <span class="bar" style="width: 75% ;"></span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <h3>scikit-learn</h3>
+                                    <div class="skill-bar">
+                                        <span class="bar" style="width: 90% ;"></span>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </section>
+
+                </div>
+            </section>
+
+        </div>
+    </body>
 </html>
