--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
             <header>
                 <h1 class="heading-container">Résumé</h1>
-                <h2 class="name-container">Konstantin Turov</h2>
-                <h3 class="job-container">Web/Ml developer</h3>
+                <h2 class="name-container">Туров Константин</h2>
+                <h3 class="job-container">Web/Ml разработчик</h3>
                 <div class="profile-picture">
                     <img src="./assets/img/photo.jpg" alt="">
                 </div>
@@ -48,21 +48,70 @@
             <section id="main">
 
                 <div class="resume-item-wrapper">
-                    <section class="resume-item experience">
+                    <section class="resume-item project">
                         <div class="inner">
-                            <h2>experience</h2>
+                            <h2>Обо мне</h2>
                             <ul>
                                 <li>
-                                    <h3>Frontend developer</h3>
-                                    <h4 class="company">QEEP-Pro</h4>
-                                    <span class="date">Dec. 2017 - Nov. 2018</span>
                                     <p class="detail">
-                                        Worked on a template engine for online stores.
+                                        Имею не плохую математическую подготовку, 
+                                        самостоятельный, легко и довольно быстро обучаем. 
+                                        Очень, очень сильно люблю работать. 
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </section>
+                    <section class="resume-item experience">
+                        <div class="inner">
+                            <h2>Опыт</h2>
+                            <ul>
+                                <li>
+                                    <h3>Фриланс</h3>
+                                    <span class="date">Сентябрь 2016 - Декабрь 2017</span>
+                                    <p class="detail">
+                                        Делал простые программки для студентов, не сложные сайты. 
+                                        Работал в стартапе UniHub пока он не прикрылся. 
+                                        Работал над свёртками для проекта Яндекса. 
                                     </p>
                                 </li>
                                 <li>
-                                    <h3>Freelance</h3>
-                                    <span class="date">Nov. 2018 - Present time</span>
+                                    <h3>Frontend developer</h3>
+                                    <h4 class="company">QEEP-Pro</h4>
+                                    <span class="date">Декабрь 2017 - Ноябрь 2018</span>
+                                    <p class="detail">
+                                        Работал над шаблонизатором интернет магазинов, а именно 
+                                        верстал шаблоны, и делал Frontend часть приложения. 
+                                        Так же немного трогал Symfony.
+                                    </p>
+                                </li>
+                                <li>
+                                    <h3>Фриланс</h3>
+                                    <span class="date">Ноябрь 2018 - Нынешнее время</span>
+                                    <p class="detail">
+                                        Решал задачки, делал программки для студентов.  
+                                        Стажировался на NLP разработчика.
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </section>
+
+                    <section class="resume-item experience">
+                        <div class="inner">
+                            <h2>Образование</h2>
+                            <ul>
+                                <li>
+                                    <h3>Неоконченное высшее</h3>
+                                    <h4 class="company">
+                                        Томский Государственный Университет, 
+                                        Физический факультет
+                                    </h4>
+                                    <span class="date">Сентябрь 2015 - Июнь 2019</span>
+                                    <p class="detail">
+                                        Ушёл из университета на последнем курсе по собственному желанию, 
+                                        ибо нужно было поправить здоровье.
+                                    </p>
                                 </li>
                             </ul>
                         </div>
@@ -70,7 +119,7 @@
 
                     <section class="resume-item skill">
                         <div class="inner">
-                            <h2>Skill</h2>
+                            <h2>Навыки</h2>
                             <ul>
                                 <li>
                                     <h3>Python</h3>
