--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                     </p>
                                 </li>
                                 <li>
-                                    <h3>Frontend developer</h3>
+                                    <h3>Frontend разработчик</h3>
                                     <h4 class="company">QEEP-Pro</h4>
                                     <span class="date">Декабрь 2017 - Ноябрь 2018</span>
                                     <p class="detail">
