--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <h3>Django</h3>
+                                    <h3>Django, DRF</h3>
                                     <div class="skill-bar">
                                         <span class="bar" style="width: 80% ;"></span>
                                     </div>
@@ -158,25 +158,13 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <h3>React</h3>
-                                    <div class="skill-bar">
-                                        <span class="bar" style="width: 70% ;"></span>
-                                    </div>
-                                </li>
-                                <li>
-                                    <h3>Redux</h3>
+                                    <h3>React, Redux</h3>
                                     <div class="skill-bar">
                                         <span class="bar" style="width: 50% ;"></span>
                                     </div>
                                 </li>
                                 <li>
-                                    <h3>HTML</h3>
-                                    <div class="skill-bar">
-                                        <span class="bar" style="width: 85% ;"></span>
-                                    </div>
-                                </li>
-                                <li>
-                                    <h3>CSS</h3>
+                                    <h3>vue.js, vuex, vue-router, vue-resourse</h3>
                                     <div class="skill-bar">
                                         <span class="bar" style="width: 85% ;"></span>
                                     </div>
