--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
                             <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
                         </li>
                         <li>
+                            <a href="mailto:konantur@gmail.com">konantur1322@yandex.ru</a>
+                            <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
+                        </li>
+                        <li>
                             <a href="https://github.com/KonAnTur" target="_blank">GitHub</a>
                             <span><i class="fa fa-github" aria-hidden="true"></i></span>
                         </li>
@@ -87,10 +91,18 @@
                                 </li>
                                 <li>
                                     <h3>Фриланс</h3>
-                                    <span class="date">Ноябрь 2018 - Нынешнее время</span>
+                                    <span class="date">Ноябрь 2018 - Июнь 2020</span>
                                     <p class="detail">
                                         Решал задачки, делал программки для студентов.  
                                         Стажировался на NLP разработчика.
+                                    </p>
+                                </li>
+                                <li>
+                                    <h3>Web/ML разработчик</h3>
+                                    <h4 class="company">Mongoose</h4>
+                                    <span class="date">Июнь 2020 - Нынешнее время</span>
+                                    <p class="detail">
+                                        Работаю над платформой управления Instagram ботами.
                                     </p>
                                 </li>
                             </ul>
@@ -111,6 +123,29 @@
                                     <p class="detail">
                                         Ушёл из университета на последнем курсе по собственному желанию, 
                                         ибо нужно было поправить здоровье.
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </section>
+
+                    <section class="resume-item experience">
+                        <div class="inner">
+                            <h2>Проекты</h2>
+                            <ul>
+                                <li>
+                                    <h3>QEEP-Pro</h3>
+                                    <p class="detail">
+                                        QEEP-Pro - это и CRM система, и шаблонизатор и торговая платформа, 
+                                        созданная для упращения выхода малого бизнеса на интернет продажи. 
+                                    </p>
+                                </li>
+                                <li>
+                                    <h3>Instarun</h3>
+                                    <p class="detail">
+                                        InstaRun - это платформа для управления Instagram ботами (аналог InstaBoss, 
+                                        для частного использования). Платформу писал практически самостоятельно, 
+                                        с использованием Django, Vue, Selenium, Celery, Docker.
                                     </p>
                                 </li>
                             </ul>
