--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
                         </li>
                         <li>
-                            <a href="mailto:konantur@gmail.com">konantur1322@yandex.ru</a>
+                            <a href="mailto:konantur@gmail.com">konantur@gmail.com</a>
                             <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
                         </li>
                         <li>
