--- a/index.html
+++ b/index.html
@@ -100,9 +100,29 @@
                                 <li>
                                     <h3>Web/ML разработчик</h3>
                                     <h4 class="company">Mongoose</h4>
+                                    <span class="date">Декабрь 2020 - Март 2021</span>
+                                    <p class="detail">
+                                        Занимался обученим ML моделей для улучшения поиска 
+                                        "дыр в безопасности" 
+                                        комьютеров пользователей.
+                                    </p>
+                                </li>
+                                <li>
+                                    <h3>Web/ML разработчик</h3>
+                                    <h4 class="company">Mongoose</h4>
                                     <span class="date">Июнь 2020 - Нынешнее время</span>
                                     <p class="detail">
                                         Работаю над платформой управления Instagram ботами.
+                                    </p>
+                                </li>
+                                <li>
+                                    <h3>Web/ML разработчик</h3>
+                                    <h4 class="company">ЦентроФинанс</h4>
+                                    <span class="date">Декабрь 2020 - Нынешнее время</span>
+                                    <p class="detail">
+                                        Работаю с существующей микросервисной архитектурой 
+                                        (добавление новых возможностей и их интеграция с существующими). 
+                                        Занимаюсь обучением ML моделей и их интеграцией в архитектуру.
                                     </p>
                                 </li>
                             </ul>
