--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 </li>
                                 <li>
                                     <h3>Web/ML разработчик</h3>
-                                    <h4 class="company">Mongoose</h4>
+                                    <h4 class="company">Back&Dev</h4>
                                     <span class="date">Декабрь 2020 - Март 2021</span>
                                     <p class="detail">
                                         Занимался обученим ML моделей для улучшения поиска 
