--- a/index.html
+++ b/index.html
@@ -1,31 +1,248 @@
-<!DOCTYPE HTML PUBLIC>
-<html>
+<!DOCTYPE html>
+<html lang="ko">
+
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>С Днём Рождения!</title>
-        <link rel="stylesheet" href="index.css">
+        <meta charset="utf-8">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <title>Résumé</title>
+
+        <link rel="stylesheet" href="./assets/font/noto/stylesheets/NotoSansKR-Hestia.css">
+
+        <link href="./assets/bower_components/components-font-awesome/css/font-awesome.min.css" rel="stylesheet">
+
+        <link href="./assets/css/common.css" rel="stylesheet">
+        <link href="./assets/css/style.css" rel="stylesheet">
     </head>
+
     <body>
-        <div class="line">
-            <div class="game">
-                <h3>Янины путешествия</h3>
-                <div id="girl"></div>
-                <div id="scene" class="scene">
-                    <div id="tree"></div>
-                    <div id="fab"></div>
-                    <div id="build"></div>
-                    <div id="palm"></div>
+
+        <div class="resume-wrapper">
+
+            <header>
+                <h1 class="heading-container">Résumé</h1>
+                <h2 class="name-container">Туров Константин</h2>
+                <h3 class="job-container">Web/Ml разработчик</h3>
+                <div class="profile-picture">
+                    <img src="./assets/img/photo.jpg" alt="">
                 </div>
-            </div>
+                <div class="contact-container">
+                    <ul class="contact-list">
+                        <li>
+                            <a href="tel:89996197931">+7 999 619 79 31</a>
+                            <span><i class="fa fa-phone" aria-hidden="true"></i></span>
+                        </li>
+                        <li>
+                            <a href="mailto:konantur1322@yandex.ru">konantur1322@yandex.ru</a>
+                            <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
+                        </li>
+                        <li>
+                            <a href="mailto:konantur@gmail.com">konantur@gmail.com</a>
+                            <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
+                        </li>
+                        <li>
+                            <a href="https://github.com/KonAnTur" target="_blank">GitHub</a>
+                            <span><i class="fa fa-github" aria-hidden="true"></i></span>
+                        </li>
+                    </ul>
+                </div>
+            </header>
+
+            <section id="main">
+
+                <div class="resume-item-wrapper">
+                    <section class="resume-item project">
+                        <div class="inner">
+                            <h2>Обо мне</h2>
+                            <ul>
+                                <li>
+                                    <p class="detail">
+                                        Имею не плохую математическую подготовку, 
+                                        самостоятельный, легко и довольно быстро обучаем. 
+                                        Очень, очень сильно люблю работать. 
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </section>
+                    <section class="resume-item experience">
+                        <div class="inner">
+                            <h2>Опыт</h2>
+                            <ul>
+                                <li>
+                                    <h3>Фриланс</h3>
+                                    <span class="date">Сентябрь 2016 - Декабрь 2017</span>
+                                    <p class="detail">
+                                        Делал простые программки для студентов, не сложные сайты. 
+                                        Работал в стартапе UniHub пока он не прикрылся. 
+                                        Работал над свёртками для проекта Яндекса. 
+                                    </p>
+                                </li>
+                                <li>
+                                    <h3>Frontend разработчик</h3>
+                                    <h4 class="company">QEEP-Pro</h4>
+                                    <span class="date">Декабрь 2017 - Ноябрь 2018</span>
+                                    <p class="detail">
+                                        Работал над шаблонизатором интернет магазинов, а именно 
+                                        верстал шаблоны, и делал Frontend часть приложения. 
+                                        Так же немного трогал Symfony.
+                                    </p>
+                                </li>
+                                <li>
+                                    <h3>Фриланс</h3>
+                                    <span class="date">Ноябрь 2018 - Июнь 2020</span>
+                                    <p class="detail">
+                                        Решал задачки, делал программки для студентов.  
+                                        Стажировался на NLP разработчика.
+                                    </p>
+                                </li>
+                                <li>
+                                    <h3>Web/ML разработчик</h3>
+                                    <h4 class="company">Back&Dev</h4>
+                                    <span class="date">Декабрь 2020 - Март 2021</span>
+                                    <p class="detail">
+                                        Занимался обученим ML моделей для улучшения поиска 
+                                        "дыр в безопасности" 
+                                        комьютеров пользователей.
+                                    </p>
+                                </li>
+                                <li>
+                                    <h3>Web/ML разработчик</h3>
+                                    <h4 class="company">Mongoose</h4>
+                                    <span class="date">Июнь 2020 - Нынешнее время</span>
+                                    <p class="detail">
+                                        Работаю над платформой управления Instagram ботами.
+                                    </p>
+                                </li>
+                                <li>
+                                    <h3>Web/ML разработчик</h3>
+                                    <h4 class="company">ЦентроФинанс</h4>
+                                    <span class="date">Декабрь 2020 - Нынешнее время</span>
+                                    <p class="detail">
+                                        Работаю с существующей микросервисной архитектурой 
+                                        (добавление новых возможностей и их интеграция с существующими). 
+                                        Занимаюсь обучением ML моделей и их интеграцией в архитектуру.
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </section>
+
+                    <section class="resume-item experience">
+                        <div class="inner">
+                            <h2>Образование</h2>
+                            <ul>
+                                <li>
+                                    <h3>Неоконченное высшее</h3>
+                                    <h4 class="company">
+                                        Томский Государственный Университет, 
+                                        Физический факультет
+                                    </h4>
+                                    <span class="date">Сентябрь 2015 - Июнь 2019</span>
+                                    <p class="detail">
+                                        Ушёл из университета на последнем курсе по собственному желанию, 
+                                        ибо нужно было поправить здоровье.
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </section>
+
+                    <section class="resume-item experience">
+                        <div class="inner">
+                            <h2>Проекты</h2>
+                            <ul>
+                                <li>
+                                    <h3>QEEP-Pro</h3>
+                                    <p class="detail">
+                                        QEEP-Pro - это и CRM система, и шаблонизатор и торговая платформа, 
+                                        созданная для упращения выхода малого бизнеса на интернет продажи. 
+                                    </p>
+                                </li>
+                                <li>
+                                    <h3>Instarun</h3>
+                                    <p class="detail">
+                                        InstaRun - это платформа для управления Instagram ботами (аналог InstaBoss, 
+                                        для частного использования). Платформу писал практически самостоятельно, 
+                                        с использованием Django, Vue, Selenium, Celery, Docker.
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </section>
+
+                    <section class="resume-item skill">
+                        <div class="inner">
+                            <h2>Навыки</h2>
+                            <ul>
+                                <li>
+                                    <h3>Python</h3>
+                                    <div class="skill-bar">
+                                        <span class="bar" style="width: 90% ;"></span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <h3>Django, DRF</h3>
+                                    <div class="skill-bar">
+                                        <span class="bar" style="width: 80% ;"></span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <h3>Flask</h3>
+                                    <div class="skill-bar">
+                                        <span class="bar" style="width: 40% ;"></span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <h3>SQL (MySQL)</h3>
+                                    <div class="skill-bar">
+                                        <span class="bar" style="width: 60% ;"></span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <h3>Docker</h3>
+                                    <div class="skill-bar">
+                                        <span class="bar" style="width: 40% ;"></span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <h3>JavaScript</h3>
+                                    <div class="skill-bar">
+                                        <span class="bar" style="width: 70% ;"></span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <h3>React, Redux</h3>
+                                    <div class="skill-bar">
+                                        <span class="bar" style="width: 50% ;"></span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <h3>vue.js, vuex, vue-router, vue-resourse</h3>
+                                    <div class="skill-bar">
+                                        <span class="bar" style="width: 85% ;"></span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <h3>PyTorch</h3>
+                                    <div class="skill-bar">
+                                        <span class="bar" style="width: 65% ;"></span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <h3>scikit-learn</h3>
+                                    <div class="skill-bar">
+                                        <span class="bar" style="width: 90% ;"></span>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </section>
+
+                </div>
+            </section>
+
         </div>
-        <div id="train"></div>
-        <div id="my_modal" class="modal">
-            <div class="modal_content">
-                <h4 id="h4"></h4>
-                <p id="text"></p>
-                <button id="btn" class="close_modal_window"></button>
-            </div>
-        </div>
-        <script src="index.js"></script>
     </body>
 </html>
